--- a/HotfixManager.Eventhandlers/HotfixManager.EventHandlers.csproj
+++ b/HotfixManager.Eventhandlers/HotfixManager.EventHandlers.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConsoleEventHandler.cs" />
     <Compile Include="PreDeleteEventHandler.cs" />
+    <Compile Include="PostInstallSetup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
